...
    <string name="my_tasks">My Tasks</string>
    <string name="all_task">All Task</string>
    <string name="filler">filler</string>
    <string name="sampleText">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec suscipit orci eget rhoncus fermentum. Fusce bibendum, nisl facilisis fermentum tempus, urna magna dictum sem, in malesuada massa eros cursus leo. Phasellus ut bibendum elit. Suspendisse et commodo dolor, vitae posuere sapien. Sed ut sapien sit amet sem volutpat suscipit. Ut vitae arcu ligula. Nam imperdie
    <string name="userTitle">No Current User</string>
    <string name="userName">Username</string>
    <string name="save">Save</string>
    <string name="setting">Setting</string>
    <string name="task1">Walk The Dog</string>
    <string name="task2">Eat</string>
    <string name="task3">Finish Your Coding Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="defaultTextForRecycler">testing thing why wont work???</string>
    <string name="buttonTextGoToTask">Go To Task</string>
    <string name="selectTeam">Select Team Here</string>
    <string name="loginText">Login</string>
...
