...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#E80D0D"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/textViewMainMyTaskTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/rectangle_for_main_task"
...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/goToAddFormButton"
        app:layout_constraintTop_toBottomOf="@+id/textViewMainMyTaskTitle" />

    <Button
        android:id="@+id/goToSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#3574E1"
        android:text="@string/setting"
        android:textColor="#4300FF"
        app:layout_constraintBottom_toTopOf="@+id/mainBottomBannerAdView"
...
