...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.TaskDetail">

    <TextView
        android:id="@+id/textViewTaskDetailPageTitle"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:text="@string/task_title"
        android:textAlignment="center"
        android:textSize="36sp"
        app:autoSizeTextType="uniform"
...
